<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		google_pixel_5___4
     *	@date 		Sunday 19th of June 2022 03:27:04 PM
     *	@title 		Google Pixel 5  4
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.xd
     *
     */
    -->
    <ScrollView android:id="@+id/google_pixel_5___4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View   android:id="@+id/_bg__google_pixel_5___4"
                android:background="@drawable/_bg__google_pixel_5___8_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="393dp"
                android:layout_height="851dp" />

            <View   android:id="@+id/ellipse_1"
                android:background="@drawable/ellipse_1_shape"
                android:layout_marginStart="-153dp"
                android:layout_marginTop="-149dp"
                android:layout_width="1072dp"
                android:layout_height="1002dp" />

            <View   android:id="@+id/ellipse_2"
                android:background="@drawable/ellipse_2_shape"
                android:layout_marginStart="-115dp"
                android:layout_marginTop="-183dp"
                android:layout_width="1091dp"
                android:layout_height="951dp" />

            <ImageView android:id="@+id/path_1"
                android:src="@drawable/path_1"
                android:contentDescription="path_1"
                android:layout_marginStart="87dp"
                android:layout_marginTop="272.13317871094dp"
                android:layout_width="239dp"
                android:layout_height="43.133346557617dp" />

            <ImageView android:id="@+id/avatar"
                android:src="@drawable/avatar"
                android:contentDescription="avatar"
                android:layout_marginStart="37dp"
                android:layout_marginTop="27dp"
                android:layout_width="127dp"
                android:layout_height="126dp" />

            <TextView android:id="@+id/name"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="278dp"
                android:layout_width="68dp"
                android:layout_height="41dp"
                android:text="@string/name_string"
                />

            <ImageView android:id="@+id/path_2"
                android:src="@drawable/path_4"
                android:contentDescription="path_2"
                android:layout_marginStart="87dp"
                android:layout_marginTop="321.13317871094dp"
                android:layout_width="239dp"
                android:layout_height="43.133346557617dp" />

            <TextView android:id="@+id/age"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="179dp"
                android:layout_marginTop="329dp"
                android:layout_width="50dp"
                android:layout_height="41dp"
                android:text="@string/age_string"
                />

            <ImageView android:id="@+id/path_3"
                android:src="@drawable/path_5"
                android:contentDescription="path_3"
                android:layout_marginStart="87dp"
                android:layout_marginTop="372.13317871094dp"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp" />

            <TextView android:id="@+id/gender"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="173dp"
                android:layout_marginTop="380dp"
                android:layout_width="80dp"
                android:layout_height="41dp"
                android:text="@string/gender_string"
                />

            <ImageView android:id="@+id/path_4"
                android:src="@drawable/path_4"
                android:contentDescription="path_4"
                android:layout_marginStart="202.5dp"
                android:layout_marginTop="77dp"
                android:layout_width="179.5dp"
                android:layout_height="27dp" />

            <TextView android:id="@+id/choose_avatar"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="214dp"
                android:layout_marginTop="77dp"
                android:layout_width="143dp"
                android:layout_height="41dp"
                android:text="@string/choose_avatar_string"
                />

            <ImageView android:id="@+id/polygon_1"
                android:src="@drawable/polygon_1"
                android:contentDescription="polygon_1"
                android:layout_marginStart="366dp"
                android:layout_marginTop="83dp"
                android:layout_width="16dp"
                android:layout_height="21dp" />

            <ImageView android:id="@+id/line_1"
                android:src="@drawable/line_1"
                android:contentDescription="line_1"
                android:layout_marginStart="365.5dp"
                android:layout_marginTop="77dp"
                android:layout_width="1dp"
                android:layout_height="27dp" />

            <ImageView android:id="@+id/path_5"
                android:src="@drawable/path_5"
                android:contentDescription="path_5"
                android:layout_marginStart="87dp"
                android:layout_marginTop="424.03326416016dp"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp" />

            <TextView android:id="@+id/mobile_number"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="136dp"
                android:layout_marginTop="432dp"
                android:layout_width="155dp"
                android:layout_height="41dp"
                android:text="@string/mobile_number_string"
                />

            <ImageView android:id="@+id/path_6"
                android:src="@drawable/path_6"
                android:contentDescription="path_6"
                android:layout_marginStart="87dp"
                android:layout_marginTop="475.13317871094dp"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp" />

            <ImageView android:id="@+id/path_7"
                android:src="@drawable/path_7"
                android:contentDescription="path_7"
                android:layout_marginStart="87dp"
                android:layout_marginTop="578.36663818359dp"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp" />

            <TextView android:id="@+id/email"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="173dp"
                android:layout_marginTop="483dp"
                android:layout_width="62dp"
                android:layout_height="41dp"
                android:text="@string/email_string"
                />

            <ImageView android:id="@+id/path_8"
                android:src="@drawable/path_8"
                android:contentDescription="path_8"
                android:layout_marginStart="87dp"
                android:layout_marginTop="525.29998779297dp"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp" />

            <TextView android:id="@+id/password"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="586dp"
                android:layout_width="98dp"
                android:layout_height="41dp"
                android:text="@string/password_string"
                />

            <TextView android:id="@+id/signup_as_patient"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/signup_as_health_worker_color"
                android:layout_marginLeft="108dp"
                android:layout_marginTop="229dp"
                android:layout_width="198dp"
                android:layout_height="41dp"
                android:text="@string/signup_as_patient_string"
                />

            <TextView android:id="@+id/_already_have_an_account__login"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/_already_have_an_account__login_color"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="803dp"
                android:layout_width="355dp"
                android:layout_height="50.5dp"
                android:text="@string/_already_have_an_account__login_string"
                />

            <View   android:id="@+id/rectangle_4"
                android:background="@drawable/rectangle_4_shape"
                android:layout_marginStart="114dp"
                android:layout_marginTop="682dp"
                android:layout_width="168dp"
                android:layout_height="46dp" />

            <TextView android:id="@+id/create"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/create_color"
                android:layout_marginLeft="163dp"
                android:layout_marginTop="691dp"
                android:layout_width="82dp"
                android:layout_height="41dp"
                android:text="@string/create_string"
                />

            <View   android:id="@+id/_rectangle_12"
                android:background="@drawable/_rectangle_12_shape"
                android:layout_marginStart="196dp"
                android:layout_marginTop="169dp"
                android:layout_width="181dp"
                android:layout_height="47dp" />

            <TextView android:id="@+id/address"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="161dp"
                android:layout_marginTop="527dp"
                android:layout_width="86dp"
                android:layout_height="41dp"
                android:text="@string/address_string"
                />

            <ImageView android:id="@+id/path_9"
                android:src="@drawable/path_10"
                android:contentDescription="path_9"
                android:layout_marginStart="87dp"
                android:layout_marginTop="632.43334960938dp"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp" />

            <TextView android:id="@+id/confirm_password"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/name_color"
                android:layout_marginLeft="127dp"
                android:layout_marginTop="638dp"
                android:layout_width="174dp"
                android:layout_height="41dp"
                android:text="@string/confirm_password_string"
                />

            <View   android:id="@+id/rectangle_13"
                android:background="@drawable/rectangle_14_shape"
                android:layout_marginStart="18dp"
                android:layout_marginTop="169dp"
                android:layout_width="181dp"
                android:layout_height="47dp" />

            <TextView android:id="@+id/patient"
                android:fontFamily="sans-serif-light"
                android:textSize="17sp"
                android:textColor="@color/patient_color"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="181dp"
                android:layout_width="76dp"
                android:layout_height="33.5dp"
                android:text="@string/patient_string"
                />

            <TextView android:id="@+id/health_worker"
                android:fontFamily="sans-serif-light"
                android:textSize="17sp"
                android:textColor="@color/patient_color"
                android:layout_marginLeft="219dp"
                android:layout_marginTop="181dp"
                android:layout_width="146dp"
                android:layout_height="33.5dp"
                android:text="@string/health_worker_string"
                />

        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>