<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/dashboard_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.05"
        android:paddingBottom="80dp"
        android:id="@+id/top_header"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_string"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/top_header"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:id="@+id/login"/>

    <EditText
        android:id="@+id/sign_in_as_patient"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="sans-serif-light"
        android:gravity="start"
        android:hint="@string/sign_in_as_patient_string"
        android:textColor="@color/register__as_health_worker_color"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:autofillHints="password"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sign_in_as_patient"
        android:layout_alignEnd="@+id/sign_in_as_patient"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/name_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_as_patient" />


    <Button
        android:id="@+id/continue_button"
        android:layout_width="170dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="112dp"
        android:gravity="center"
        android:text="Continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"

        android:text="@string/signup_as_patient_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue_button" />

    <Button
        android:id="@+id/button6"
        android:layout_width="170dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup_as_health_worker_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/continue_button" />

    <ImageView
        android:id="@+id/google_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:contentDescription="google_logo"
        android:src="@drawable/google_logo"
        app:layout_constraintEnd_toStartOf="@+id/fb_logo"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageView
        android:id="@+id/fb_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="fb_logo"
        android:src="@drawable/fb_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />


</androidx.constraintlayout.widget.ConstraintLayout>