<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		google_pixel_5___4
     *	@date 		Monday 20th of June 2022 07:55:58 AM
     *	@title 		Google Pixel 5  4
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.xd
     *
     */
    -->
    <ScrollView android:id="@+id/google_pixel_5___4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View   android:id="@+id/_bg__google_pixel_5___5"
                android:background="@drawable/_bg__google_pixel_5___8_shape"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="395dp"
                android:layout_height="851dp" />

            <View
                android:id="@+id/ellipse_1"
                android:layout_width="1072dp"
                android:layout_height="1002dp"
                android:layout_marginStart="-153dp"
                android:layout_marginTop="-149dp"
                android:background="@drawable/ellipse_1_shape" />

            <View
                android:id="@+id/ellipse_2"
                android:layout_width="1114dp"
                android:layout_height="975dp"
                android:layout_marginStart="-103dp"
                android:layout_marginTop="-201dp"
                android:background="@drawable/ellipse_2_shape" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="127dp"
                android:layout_height="126dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="133dp"
                android:layout_marginTop="74dp"
                android:contentDescription="logo"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/path_6"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp"
                android:layout_alignEnd="@+id/_bg__google_pixel_5___5"
                android:layout_alignParentStart="true"
                android:layout_marginStart="79dp"
                android:layout_marginTop="338.73327636719dp"
                android:layout_marginEnd="77dp"
                android:contentDescription="path_6"
                android:src="@drawable/path_6" />

            <EditText
                android:id="@+id/user_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/path_6"
                android:layout_alignEnd="@+id/path_6"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="155dp"
                android:layout_marginTop="343dp"
                android:layout_marginEnd="18dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/patient_id_string"
                android:textAlignment="center"
                android:textColor="@color/name_color"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/path_8"
                android:layout_width="239dp"
                android:layout_height="43.133361816406dp"
                android:layout_alignEnd="@+id/_bg__google_pixel_5___5"
                android:layout_alignParentStart="true"
                android:layout_marginStart="78dp"
                android:layout_marginTop="402.86663818359dp"
                android:layout_marginEnd="78dp"
                android:contentDescription="path_8"
                android:src="@drawable/path_8" />

            <TextView
                android:id="@+id/forgot_password_"
                android:layout_width="201dp"
                android:layout_height="50.5dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginLeft="96dp"
                android:layout_marginTop="477dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/forgot_password__string"
                android:textColor="@color/patient_color"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/mum_tran"
                android:layout_width="167dp"
                android:layout_height="61dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="111dp"
                android:layout_marginLeft="111dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/mum_tran_string"
                android:textColor="@color/patient_color"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/login_btn"
                android:layout_width="168dp"
                android:layout_height="46dp"
                android:layout_alignEnd="@+id/_bg__google_pixel_5___5"
                android:layout_alignParentStart="true"
                android:layout_marginStart="115dp"
                android:layout_marginTop="541dp"
                android:layout_marginEnd="112dp"

                android:background="@drawable/rectangle_4_shape" />

            <TextView android:id="@+id/login"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="@color/create_color"
                android:layout_marginLeft="173dp"
                android:layout_marginTop="550dp"
                android:layout_width="65dp"
                android:layout_height="41dp"
                android:text="@string/login_string"
                />

            <TextView
                android:id="@+id/health_worker"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/_bg__google_pixel_5___5"
                android:layout_alignParentStart="true"
                android:layout_marginStart="118dp"
                android:layout_marginLeft="222dp"
                android:layout_marginTop="232dp"
                android:layout_marginEnd="115dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/sign_in_string"
                android:textAlignment="center"
                android:textColor="#FBFBFB"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/path_8"
                android:layout_alignEnd="@+id/path_8"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="154dp"
                android:layout_marginTop="412dp"
                android:layout_marginEnd="21dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/name_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_alignParentStart="true"
                android:layout_marginStart="108dp"
                android:layout_marginTop="10dp"
                android:onClick="registerOptions"
                android:text="No Account? Click here"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>